--- a/photo.html
+++ b/photo.html
@@ -71,24 +71,24 @@
           <div class="photo-content">
             <div class="photo-container">
               <div class="photo-gallery">
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__third"><a href="#"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__first"><a href="#"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
-                <div class="photo-gallery-img photo-gallery-img__second"><a href="#"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__third"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic3.jpg" alt="Изображение 3"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__first"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic1.jpg" alt="Изображение 1"></a></div>
+                <div class="photo-gallery-img photo-gallery-img__second"><a class="gallery-box" href="img/gallery-img.jpg" data-fancybox="images"><img src="img/gallery-pic2.jpg" alt="Изображение 2"></a></div>
               </div>
             </div>
           </div>
